# TMDB-Service

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose-example.yaml  docker-compose.yaml  pyproject.toml
examples/flask_sqlalchemy_models/: movies.py  series.py
tmdb_service/: api.py  api_server.py  config.py  create_tables.py  db_utils.py  globals.py  job_queue.py  logger_utils.py  manage_jobs.py  notifications.py  service.py  tasks.py  tmdb_task_utils.py  worker.py
tmdb_service/models/: movies.py  series.py  service_metadata.py
tmdb_service/tmdb_to_csv/: movies.py  process.py  series.py  utils.py
tmdb_service/tmdb_to_csv/sql/: create_staging_movie.sql  create_staging_series.sql  drop_old_tables_movie.sql  drop_old_tables_series.sql  promote_staging_to_production_movie.sql  promote_staging_to_production_series.sql
