[project]
name = "tmdb-service"
version = "1.1.0"
description = "TMDB Service"
requires-python = ">=3.12"
authors = [{ name = "jessielw" }]
license = { file = "LICENSE" }
keywords = ["tmdb", "api", "cli", "service", "automatic"]
urls = { "Source" = "https://github.com/jessielw/TMDB-Service", "Tracker" = "https://github.com/jessielw/TMDB-Service/issues" }
dependencies = [
    "aiohttp==3.13.2",
    "aiofiles==25.1.0",
    "aiocron==2.1",
    "python-dotenv==1.2.1",
    "psycopg2-binary==2.9.11",
    "sqlalchemy==2.0.44",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
line-length = 88
include = ["tmdb_service/**/*.py", "examples/**/*.py"]

[tool.ruff.lint]
select = ["I"]

[tool.basedpyright]
include = ["tmdb_service", "examples"]
typeCheckingMode = "standard"

[tool.setuptools.package-data]
"tmdb_service.tmdb_to_csv" = ["sql/*.sql"]
